<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="296dp"

        android:layout_height="wrap_content"
        android:background="@drawable/common_button_bg_white_selector"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/loginout_tips"
            android:textColor="#2F2F33"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/loginout_content"
            android:textColor="#2F2F33"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_sure"
            style="@style/button_style_common_view_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_btn_green_common_view_radio_15_bg"
            android:gravity="center"
            android:minWidth="95dp"
            android:text="@string/loginout_button_content"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />


    </LinearLayout>
</LinearLayout>