<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_mid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_button_bg_white_selector"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_tips1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/scene_line_adapter_tips"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_adapter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:text="@string/scene_line_adapter_tips"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/scene_line_del_tips"
        android:textColor="#1DCE74"
        android:textSize="14sp" />


    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_title"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>


        <TextView
            android:id="@+id/tv_cancel"
            style="@style/button_style_common_view_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_btn_green_bbbb_radio_15_bg"
            android:gravity="center"
            android:minWidth="95dp"
            android:text="@string/no"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>

        <TextView
            android:id="@+id/tv_sure"
            style="@style/button_style_common_view_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_btn_green_common_view_radio_15_bg"
            android:gravity="center"
            android:minWidth="95dp"
            android:text="@string/yes"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>

    </LinearLayout>


</LinearLayout>

