<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_mid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">

    <ImageView
        android:id="@+id/iv_scene_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="20dp"
        android:src="@mipmap/icon_scene_download_cancel"
        android:visibility="invisible" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_scene_option"
        android:background="@drawable/common_button_bg_white_selector"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/download_scene_video_tips"
            android:textColor="#2F2F33"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/layout_prgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:progressDrawable="@drawable/comm_progress_bg"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_curent_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="50dp"
                    android:textColor="#2F2F33"
                    android:textSize="18sp"
                    tools:text="0M" />

                <TextView
                    android:id="@+id/tv_packge_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#2F2F33"
                    android:textSize="18sp"
                    tools:text="/0M" />
            </LinearLayout>


            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/comm_progress_bg" />


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_sucess"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_title"
            android:layout_marginBottom="10dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_success"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_centerInParent="true"
                android:src="@drawable/shape_btn_green_cicr" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/icon_scene_download__success" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_title"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></View>

            <TextView
                android:id="@+id/tv_cancel"
                style="@style/button_style_common_view_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_btn_green_bbbb_radio_15_bg"
                android:gravity="center"
                android:minWidth="95dp"
                android:text="@string/no"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></View>

            <TextView
                android:id="@+id/tv_sure"
                style="@style/button_style_common_view_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_btn_green_common_view_radio_15_bg"
                android:gravity="center"
                android:minWidth="95dp"
                android:text="@string/yes"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></View>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
